...
        } else if let validationError = error
            as? ConnectionConfigModel.ValidationError
        {
            switch validationError {
            case .passwordNil:
                Label(
                    "Password is required",
                    systemImage: "lock.circle"
                )
                .foregroundStyle(.red)
            case .privateKeyUrlNil:
                Label(
                    "Private key is required",
...
